--- a/conf/supervisord/supervisord.conf
+++ b/conf/supervisord/supervisord.conf
@@ -64,8 +64,21 @@ command= /usr/local/memcached/bin/memcached -d -m 512 -u root -c 1024 -p 11211 -
 autorestart=true
 stopsignal=INT
 user=root
-stdout_logfile=test_out.log
+stdout_logfile=memcache.log
 
+[program:php-fpm]
+command= /usr/local/php/sbin/php-fpm
+autorestart=true
+stopsignal=INT
+user=root
+stdout_logfile=php-fpm.log
+
+[program:nginx]
+command= /usr/local/nginx/sbin/nginx
+autorestart=true
+stopsignal=INT
+user=root
+stdout_logfile=nginx.log
 
 ;[program:theprogramname]
 ;command=/bin/cat              ; the program (relative uses PATH, can take args)
