--- a/conf/supervisord/supervisord.conf
+++ b/conf/supervisord/supervisord.conf
@@ -67,7 +67,8 @@ user=root
 stdout_logfile=memcache.log
 
 [program:php-fpm]
-command= /usr/local/php/sbin/php-fpm
+#command= /usr/local/php/sbin/php-fpm
+command = /usr/local/php/sbin/php-fpm -c /usr/conf/php.ini -y /usr/conf/php-fpm.conf
 autorestart=true
 stopsignal=INT
 user=root
